# BemTool-tests

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists_occigen.txt  README.md
cmake-modules/: FindBemTool.cmake  FindBemToolTests.cmake
data/: corridor_surf_2D.geo  corridor_surf_3D.geo  corridor_vol.geo  output.geo  output.msh  ring_surf.geo  ring_surf_2D.geo  ring_surf_3D.geo  ring_vol.geo  ring_vol_2D.geo
data/L/: L.geo
data/corridor/: corridor_surf_2D.geo  corridor_surf_3D.geo
data/examples/: ellipse.geo
data/examples/ddm_solve/: circle.geo  disk.geo  mesh_output.geo  sphere.geo
data/squares/: two_squares.geo  two_squares_output.geo
examples/: CMakeLists.txt  compute_err.cpp  generate.cpp  generate_sym.cpp
examples/ddm_solve/: CMakeLists.txt  ddm_combined_formulation_dir_HE_2D_P1_indirect_hmat.cpp  ddm_combined_formulation_neu_LA_3D_P1_indirect_hmat.cpp  ddm_dir_HE_2D_P1_direct_hmat.cpp  ddm_dir_HE_2D_P1_indirect_hmat.cpp  ddm_dir_HE_3D_P1_direct_hmat.cpp  ddm_dir_HE_3D_P1_indirect_hmat.cpp  ddm_first_kind_dir_HE_2D_P1_direct_hmat.cpp  ddm_first_kind_dir_HE_2D_P1_indirect_hmat.cpp  ddm_first_kind_dir_HE_3D_P1_direct_hmat.cpp  ddm_first_kind_dir_HE_3D_P1_indirect_hmat.cpp  ddm_first_kind_dir_LA_3D_P1_indirect_hmat.cpp  ddm_first_kind_neu_HE_2D_P1_indirect_hmat.cpp  ddm_first_kind_neu_HE_3D_P1_indirect_hmat.cpp  ddm_first_kind_neu_LA_3D_P1_indirect_hmat.cpp  ddm_neu_HE_2D_P1_indirect_hmat.cpp  ddm_neu_HE_3D_P1_indirect_hmat.cpp  ddm_second_kind_dir_HE_2D_P1_indirect_hmat.cpp  ddm_second_kind_neu_HE_2D_P1_direct_hmat.cpp
include/bemtool-ext/: bemtool_b.hpp
include/bemtool-tests/: tools.hpp
include/bemtool-tests/miscellaneous/: gmsh_calls.hpp  refsolution.hpp  renum.hpp  view.hpp
tests/: CMakeLists.txt
tests/functional_tests/: CMakeLists.txt
tests/functional_tests/tests_lrmat/: CMakeLists.txt  test_lrmat_partialACA.cpp
tests/functional_tests/tests_operator/: CMakeLists.txt  tests_HE_DL_2D_P1xP1_dense.cpp  tests_HE_DL_3D_P1xP1_hmat.cpp  tests_HE_HS_2D_P1xP1_dense.cpp  tests_HE_HS_2D_P1xP1_hmat.cpp  tests_HE_HS_3D_P1xP1_hmat.cpp  tests_HE_SL_2D_P0xP0_hmat.cpp  tests_HE_SL_2D_P1xP1_dense.cpp  tests_HE_SL_2D_P1xP1_hmat.cpp  tests_HE_SL_2D_P2xP2_hmat.cpp  tests_HE_SL_3D_P1xP1_hmat.cpp  tests_HE_TDL_2D_P1xP1_dense.cpp  tests_HE_TDL_2D_P1xP1_hmat.cpp  tests_HE_TDL_3D_P1xP1_hmat.cpp  tests_LA_DL_3D_P1xP1_hmat.cpp  tests_LA_HS_2D_P0xP0_hmat.cpp  tests_LA_HS_2D_P1xP1_dense.cpp  tests_LA_HS_2D_P1xP1_hmat.cpp  tests_LA_HS_3D_P1xP1_hmat.cpp  tests_LA_SL_2D_P0xP0_hmat.cpp  tests_LA_SL_2D_P1xP1_dense.cpp  tests_LA_SL_2D_P1xP1_hmat.cpp  tests_LA_SL_3D_P1xP1_hmat.cpp  tests_LA_TDL_2D_P1xP1_dense.cpp  tests_LA_TDL_3D_P1xP1_hmat.cpp  tests_YU_DL_2D_P1xP1_dense.cpp  tests_YU_DL_2D_P1xP1_hmat.cpp  tests_YU_DL_3D_P1xP1_hmat.cpp  tests_YU_HS_2D_P1xP1_dense.cpp  tests_YU_HS_2D_P1xP1_hmat.cpp  tests_YU_HS_3D_P1xP1_hmat.cpp  tests_YU_SL_2D_P1xP1_dense.cpp  tests_YU_SL_2D_P1xP1_hmat.cpp  tests_YU_SL_3D_P1xP1_hmat.cpp  tests_YU_TDL_2D_P1xP1_dense.cpp  tests_YU_TDL_2D_P1xP1_hmat.cpp  tests_YU_TDL_3D_P1xP1_hmat.cpp  tests_operator_dense.hpp  tests_operator_hmat.hpp
tests/functional_tests/tests_operator_slobodeckij/: CMakeLists.txt  tests_operator_slobodeckij.hpp  tests_operator_slobodeckij_2D_P1.cpp  tests_operator_slobodeckij_3D_P1.cpp
tests/functional_tests/tests_potential/: CMakeLists.txt  tests_potential_HE_2D_P1_hmat.cpp  tests_potential_LA_2D_P1_hmat.cpp  tests_potential_dense.hpp  tests_potential_hmat.hpp
tests/functional_tests/tests_renum/: CMakeLists.txt  tests_boundary_edges.cpp  tests_is_boundary_nodes.cpp  tests_renum_wo_boundary.cpp
tests/functional_tests/tests_solve/: CMakeLists.txt  test.cpp  tests_calderon_dir_LA_2D_P1_indirect_hmat.cpp  tests_ddm_2D.hpp  tests_ddm_3D.hpp  tests_ddm_HE_2D_P1_direct_dir_hmat.cpp  tests_ddm_HE_2D_P1_direct_hmat.cpp  tests_ddm_HE_2D_P1_indirect_dir_hmat.cpp  tests_ddm_HE_2D_P1_indirect_hmat.cpp  tests_ddm_HE_3D_P1_direct_dir_hmat.cpp  tests_ddm_HE_3D_P1_direct_hmat.cpp  tests_ddm_HE_3D_P1_indirect_dir_hmat.cpp  tests_ddm_HE_3D_P1_indirect_hmat.cpp  tests_ddm_dir_HE_2D_P1_direct_hmat.cpp  tests_ddm_dir_HE_2D_P1_indirect_hmat.cpp  tests_ddm_dir_HE_3D_P1_direct_hmat.cpp  tests_ddm_dir_HE_3D_P1_indirect_hmat.cpp  tests_ddm_dir_LA_2D_P1_indirect_hmat.cpp  tests_ddm_dir_YU_2D_P1_indirect_hmat.cpp  tests_ddm_dir_YU_3D_P1_indirect_hmat.cpp  tests_ddm_ff.cpp  tests_ddm_neu_HE_2D_P1_indirect_hmat.cpp  tests_ddm_neu_YU_2D_P1_indirect_hmat.cpp  tests_ddm_neu_YU_3D_P1_indirect_hmat.cpp  tests_proto_LA_2D_P1_indirect_hmat.cpp  tests_proto_YU_2D_P1_indirect_hmat.cpp  tests_proto_YU_3D_P1_indirect_hmat.cpp  tests_solve.hpp  tests_solve_2D.hpp  tests_solve_3D.hpp  tests_solve_HE_3D_P1_dir_hmat.cpp
tests/functional_tests/tests_solve_multi_rhs/: CMakeLists.txt  tests_ddm_multi_rhs_2D.hpp  tests_ddm_multi_rhs_HE_2D_P1_indirect_dir_hmat.cpp  tests_ddm_multi_rhs_HE_3D_P1_indirect_dir_hmat.cpp
tests/functional_tests/tests_view/: CMakeLists.txt  tests_view.cpp
tests/functional_tests/tests_weights/: CMakeLists.txt  tests_weights.cpp
tests/performance_tests/: CMakeLists.txt
tests/performance_tests/tests_operator/: CMakeLists.txt  test2D.cpp  tests_HE_DL_2D_P1xP1_dense.cpp  tests_HE_DL_2D_P1xP1_hmat.cpp  tests_HE_HS_2D_P1xP1_dense.cpp  tests_HE_HS_2D_P1xP1_hmat.cpp  tests_HE_SL_2D_P1xP1_dense.cpp  tests_HE_SL_2D_P1xP1_hmat.cpp  tests_HE_SL_3D_P1xP1_hmat.cpp  tests_HE_TDL_2D_P1xP1_dense.cpp  (+20 more)
tests/performance_tests/tests_potential/: CMakeLists.txt  tests_potential_HE_2D_P1_dense.cpp  tests_potential_HE_2D_P1_hmat.cpp  tests_potential_LA_2D_P1_dense.cpp  tests_potential_LA_2D_P1_hmat.cpp  tests_potential_YU_2D_P1_dense.cpp  tests_potential_YU_2D_P1_hmat.cpp  tests_potential_dense.hpp  tests_potential_hmat.hpp
tests/performance_tests/tests_solve/: CMakeLists.txt  tests_ddm_2D.hpp  tests_ddm_3D.hpp  tests_ddm_HE_2D_P1_direct_dir_hmat.cpp  tests_ddm_HE_3D_P1_dir_hmat.cpp  tests_ddm_HE_3D_P1_direct_dir_hmat.cpp  tests_ddm_HE_3D_P1_indirect_dir_hmat.cpp  tests_solve_2D.hpp  tests_solve_3D.hpp  tests_solve_HE_2D_P1_dir_hmat.cpp
(+12 files in other folders)
