add_subdirectory(tests_potential)
add_subdirectory(tests_operator)
add_subdirectory(tests_solve)
add_subdirectory(tests_solve_multi_rhs)
add_subdirectory(tests_view)
add_subdirectory(tests_weights)
add_subdirectory(tests_renum)
add_subdirectory(tests_operator_slobodeckij)

add_dependencies(build-tests-functional build-tests-functional-operators)
add_dependencies(build-tests-functional build-tests-functional-operators-slobodeckij)
add_dependencies(build-tests-functional build-tests-functional-potentials)
