#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#
add_executable(Tests_view tests_view.cpp)
target_link_libraries(Tests_view bemtool bemtool_visu)
