#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#
add_executable(Tests_weights tests_weights.cpp)
target_link_libraries(Tests_weights bemtool)
